<resources>
    <string name="app_name">Tron</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="card_show_S">S1E15</string>
    <string name="card_show_E">E</string>
    <string name="show_minus_string">&#8211;</string>
    <string name="show_plus_string">+</string>
    <string name="actionbar_add_string">Add</string>
    <string name="title_activity_new_show">NewShowActivity</string>
    <string name="new_show_cancel_string">CANCEL</string>
    <string name="new_show_done_string">DONE</string>
    <string name="new_show_episodes_season">Episodes in a season</string>
    <string name="new_show_show_name_hint">Show name</string>
    <string name="new_show_season_string">Current season</string>
    <string name="new_show_episode_string">Current episode</string>
    <string name="new_show_airing_strinf">Currently airing</string>
    <string name="show_dialog_done">Done</string>
    <string name="show_dialog_edit">Edit</string>
    <string-array name="days_array">
        <item>-- Select air day --</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="title_activity_edit_show">EditShow</string>
    <string name="new_show_create_button">CREATE</string>
    <string name="new_show_cancel_button">CANCEL</string>
    <string name="edit_show_save_button">SAVE</string>
    <string name="search">Search</string>
    <string name="action_export_shows_string">Export shows to file</string>
    <string name="action_import_shows_string">Import shows from file</string>
    <string name="searchable_hint">Search for a show</string>
    <string name="show_dialog_delete_string">DELETE</string>
    <string name="title_activity_a">AA</string>
    <string name="sample_day_string">Tuesdays</string>
    <string name="sample_show_string">Agents of S.H.I.E.L.D.</string>
    <string name="last_updated_string">Last Updated</string>
    <string name="prefNotification_title">Daily notifications</string>
    <string name="prefNotification_summary">Notify me daily of my shows for the day.</string>
    <string name="notificaton_title">Airing Today</string>
</resources>
