<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:res-auto="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        res-auto:showAsAction="collapseActionView|ifRoom"
        res-auto:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/action_export_shows"
        android:title="@string/action_export_shows_string"/>
    <item
        android:id="@+id/action_import_shows"
        android:title="@string/action_import_shows_string"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        res-auto:showAsAction="never" />
</menu>
