<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:foreground="@drawable/custom_bg"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="5dp">
        <RelativeLayout
            android:id="@+id/show_RL"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="#FFFFFF"
            android:visibility="visible">

            <TextView
                android:id="@+id/show_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="Agents of S.H.I.E.L.D."
                android:textColor="#FFFFFF"
                android:textSize="11pt"
                android:visibility="visible" />

            <TextView
                android:id="@+id/show_S"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/show_title"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:text="@string/card_show_S"
                android:textColor="#000000"
                android:textSize="14pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/show_weekday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/show_S"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:text="Tuesdays"
                android:textColor="#000000"
                android:textSize="9pt" />

            <TextView
                android:id="@+id/show_plus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/show_title"
                android:clickable="true"
                android:paddingEnd="10dp"
                android:text="@string/show_plus_string"
                android:textColor="#000000"
                android:textSize="18pt" />

            <TextView
                android:id="@+id/show_minus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/show_plus"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:text="@string/show_minus_string"
                android:textColor="#000000"
                android:textSize="20pt" />

            <View
                android:id="@+id/feedLine"
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@color/colorPrimaryDark" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>